# se_project

./: .gitignore  README.md
ecocart/: README.md  ecocart_billing.db  eval.py  main.py  pyproject.toml  requirments.txt  run_tracker.py
ecocart/config/: sku_map.json  tracker_config.yaml
ecocart/src/ecocart/: config.py  database.py  main.py
ecocart/src/ecocart/api/: __init__.py  app.py  main.py  state.py
ecocart/src/ecocart/api/handlers/: cart_handler.py  item_handler.py
ecocart/src/ecocart/api/models/: database.py
ecocart/src/ecocart/api/routers/: __init__.py  cart_router.py  health_router.py  item_router.py
ecocart/src/ecocart/api/templates/: index.html
ecocart/src/ecocart/utils/: api_client.py
ecocart/src/vector_db/: __init__.py
ecocart/tests/: test_api.py  test_tracker.py
shipment-simulation/: main.py  pyproject.toml
tracefresh/: next.config.ts  package-lock.json  package.json
tracefresh/app/: globals.css  layout.tsx  page.tsx
tracefresh/app/(auth)/sign-in/: actions.ts  page.tsx
tracefresh/app/(auth)/sign-up/: actions.ts  page.tsx
tracefresh/app/(protected)/dashboard/: actions.ts  layout.tsx  page.tsx
tracefresh/app/(protected)/dashboard/items/: page.tsx
tracefresh/app/api/predictions/: route.ts
tracefresh/app/api/shipments/: route.ts
tracefresh/components/: ecommerce-grid.tsx  header.tsx  loading-button.tsx  new-shipment-button.tsx  radio-cards.tsx  stat-card.tsx
tracefresh/components/ui/: table.tsx
tracefresh/context/: cart-context.tsx
tracefresh/lib/: auth.ts  prisma.ts
tracefresh/prisma/: dev.db  schema.prisma
(+5 files in other folders)
